Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.4.0
-
1de633b2f2 (qt/tqtc-qmlcompilerplus/dev) 7b856e2caf (qt/tqtc-qmlcompilerplus/6.4)
Description
Code
import QtQuick Window { width: 640 height: 480 visible: true Component.onCompleted: console.log("Hello!") }
Compile Output
Error: main.qml: Object type Console is not derived from QObject or QQmlComponent. You may need to fully qualify all names in C++ so that moc can see them. You may also need to add qt_extract_metatypes(<target containing >). Error: main.qml:8:36: Could not compile binding for onCompleted: Cannot generate efficient code for call to untyped JavaScript function Component.onCompleted: console.log("Hello!") ^^^
Attachments
Issue Links
- resulted in
-
QTBUG-107175 Have qmlsc and qmlcachegen generate code for console.log() and friends
-
- Closed
-
For Gerrit Dashboard: QTBUG-107168 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
437993,3 | QmlCompiler: Add a separate flag for the "pragma Strict" check | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
437994,3 | Demote qmlsc compiler diagnostics to QtWarningMsg | dev | qt/tqtc-qmlcompilerplus | Status: MERGED | +2 | 0 |
439473,3 | QmlCompiler: Add a separate flag for the "pragma Strict" check | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
440852,2 | Demote qmlsc compiler diagnostics to QtWarningMsg | 6.4 | qt/tqtc-qmlcompilerplus | Status: MERGED | +2 | 0 |